fix spacing issues on the dashboard - may limit to 2 columns.

--- a/WebContent/css/dashboard.css
+++ b/WebContent/css/dashboard.css
@@ -1,5 +1,7 @@
 #content div.column {
 	float: left;
+	width: 46%;
+	margin-right: 2%;
 }
 
 #content div.panel_placeholder {
